fix spacing on friendManager search results

--- a/styles/components/FriendManager.css
+++ b/styles/components/FriendManager.css
@@ -27,7 +27,7 @@
 }
 
 .friend-manager-search-results {
-  @apply mt-4;
+  @apply mt-4 w-full;
 }
 
 .friend-manager-button-add {
